--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -2,18 +2,15 @@ name: Continuous Integration
 on: [push, pull_request]
 jobs:
   test:
-    name: Node.js v${{ matrix.node-version }}
+    name: Test
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16, 18, 19]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Setup Node.js
+      - name: Setup Node.js v18
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node_version }}
+          node-version: 18
           cache: npm
       - name: Install dependencies
         run: npm ci
