--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "start": "npm run build && node ."
   },
   "dependencies": {
-    "@discordjs/collection": "^1.5.0",
+    "@discordjs/collection": "^1.5.1",
     "@discordjs/core": "^0.5.2",
-    "@discordjs/rest": "^1.7.0",
-    "@discordjs/ws": "^0.8.1",
-    "dotenv": "^16.0.3",
-    "prettier": "^2.8.4"
+    "@discordjs/rest": "^1.7.1",
+    "@discordjs/ws": "^0.8.3",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
-    "@types/node": "^18.15.0",
-    "typescript": "^4.9.5"
+    "@types/node": "^20.1.1",
+    "prettier": "^2.8.8",
+    "typescript": "^5.0.4"
   }
 }
