Add environment variable wrapper and add shard count to `.env`

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-BOT_TOKEN="YOUR_BOT_TOKEN_HERE"
+BOT_TOKEN='YOUR_BOT_TOKEN_HERE'
+
+# Can be kept empty to use Discord's recommended shard count
+SHARD_COUNT=
