--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,12 @@ BOT_TOKEN='YOUR_BOT_TOKEN_HERE'
 
 # Can be kept empty to use Discord's recommended shard count
 SHARD_COUNT=
+
+# Whether to exit when an error happens in the middle of an event handled by the components loader
+EXIT_ON_EVENT_ERROR=false
+
+# Whether to exit when an error happens in the middle of an interaction handled by the interaction handler
+EXIT_ON_INTERACTION_ERROR=false
+
+# Whether to exit when an error happens in the middle of loading a component
+EXIT_ON_COMPONENT_ERROR=true
