--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "discord.js-components-bot",
   "description": "Discord.js bot template with components system",
   "license": "MIT",
+  "private": true,
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
