--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@discordjs/collection": "^1.5.2",
     "@discordjs/core": "^1.0.0",
+    "@discordjs/formatters": "^0.3.1",
     "@discordjs/rest": "^2.0.0",
     "@discordjs/ws": "^1.0.0"
   },
