--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 BOT_TOKEN='YOUR_BOT_TOKEN_HERE'
 
 # Can be kept empty to use Discord's recommended shard count
-SHARD_COUNT=
+BOT_SHARD_COUNT=
 
 # Whether to exit when an error happens in the middle of an event handled by the components loader
 EXIT_ON_EVENT_ERROR=false
