--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
 
     "module": "NodeNext",
     "moduleResolution": "nodenext",
+    "paths": {
+      "/*": ["./src/*"]
+    },
 
     "newLine": "lf",
     "outDir": "dist",
