--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "lint": "prettier --ignore-path .gitignore -c .",
     "format": "prettier --ignore-path .gitignore -w .",
-    "build": "rimraf dist && tsc",
+    "build": "rimraf dist && tsc && tsc-alias",
     "deploy": "node --env-file=.env dist/deploy.js",
     "start": "node --env-file=.env ."
   },
@@ -24,6 +24,7 @@
     "@types/node": "^22.3.0",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
+    "tsc-alias": "^1.8.10",
     "typescript": "^5.5.4"
   }
 }
